--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Portfolio da Milena</title>
+</head>
+<body>
+    <header>
+        <img src="" alt="">
+    </header>
+    <p></p>
+    <h1></h1>
+    <p>Sou a Milena. :D
+    </p>
+</body>
+</html>
