--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="img/download.png" alt="imagem garfield">
     </header>
     <p></p>
     <h1></h1>
