--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
     </header>
     <p></p>
     <h1></h1>
-    <p>Sou a Milena. :D
+    <p>Sou a Milena. Sou aluna de programação. Veja abaixo meus projetos :D
     </p>
+    <p>Minhas habilidades</p>
+    <div>
+        <p>Desenho</p>
+        <p>Ler</p>
+    </div>
+    <header>
+        <main class="container mt-5">
+            <h2>Meus projetos</h2>
+            <div class="row">
+                <!-- Projeto 1 -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="img/download.jpeg" class="card-img-top" alt="Imagem do projeto da biblioteca virtual">
+                        <div class="card-body">
+                            <h5>Minha biblioteca: Uma Webpage Personalizada</h5>
+                            <p class="card-text"> aaa
+                            </p>
+                            <button type="button" class="bnt bnt-link">Veja o projeto</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </main>
+    </header>
 </body>
 </html>
