--- a/index.html
+++ b/index.html
@@ -1,43 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio da Milena</title>
 </head>
+
 <body>
     <header>
-        <img src="img/download.jpeg" alt="imagem garfield">
-    </header>
-    <p></p>
-    <h1></h1>
-    <p>Sou a Milena. Sou aluna de programação. Veja abaixo meus projetos :D
-    </p>
-    <p>Minhas habilidades</p>
-    <div>
-        <p>Desenho</p>
-        <p>Ler</p>
-    </div>
-    <header>
-        <main class="container mt-5">
-            <h2>Meus projetos</h2>
-            <div class="row">
-                <!-- Projeto 1 -->
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="img/download.jpeg" class="card-img-top" alt="Imagem do projeto da biblioteca virtual">
-                        <div class="card-body">
-                            <h5>Minha biblioteca: Uma Webpage Personalizada</h5>
-                            <p class="card-text"> aaa
-                            </p>
-                            <button type="button" class="bnt bnt-link">Veja o projeto</button>
-                        </div>
+        <img src="img/download.jpeg">
 
-                    </div>
+
+        <h1>Milena Belmonte Amaral</h1>
+        <p>Sou a Milena. Sou aluna de programação. Veja abaixo meus projetos :D
+        </p>
+        <p>Minhas habilidades</p>
+        <div>
+            <p>Desenho</p>
+            <p>Ler</p>
+        </div>
+        <header>
+            <main class="container mt-5">
+                <h2>Meus projetos</h2>
+                <div class="row">
+                    <!-- Projeto 1 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="img/download.jpeg" class="card-img-top"
+                                alt="Imagem do projeto da biblioteca virtual">
+                            <div class="card-body">
+                                <h5 class="card-title">Minha biblioteca: Uma Webpage Personalizada</h5>
+                                <p class="card-text">
+                                </p>
+                                <button type="button" class="bnt bnt-link">Veja o projeto</button>
+                            </div>
+                            <!-- Projeto 2 -->
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <img src="img/download.jpeg" class="card-img-top"
+                                        alt="Imagem do projeto de biblioteca virtual">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a
+                                            Inteligência
+                                            Artificial</h5>
+                                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que
+                                            explora o
+                                            impacto e as implicações da Inteligência Artificial (IA) na sociedade,
+                                            permitindo que as
+                                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma
+                                            narrativa sobre o
+                                            futuro da IA.</p>
+                                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Projeto 3 -->
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <img src="img/download.jpeg" class="card-img-top"
+                                        alt="Imagem do projeto de biblioteca virtual">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em
+                                            Astronomia com Scratch
+                                        </h5>
+                                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa
+                                            educativa sobre
+                                            astronomia, permitindo aos usuários explorar informações sobre constelações,
+                                            eclipses, e a
+                                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                                        </p>
+                                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+            </main>
+
+            <footer class="container py-5">
+                <h2>Entre em contato</h2>
+                <div>
+                    <a href="https://github.com/Mln884">@Mln884</a>
                 </div>
+                <p class="my-5 text-center">© Copyright 2024. Produzido Oráculo</p>
+            </footer>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
             </div>
-        </main>
-    </header>
+            </div>
+            </div>
+            </main>
+        </header>
 </body>
+
 </html>
