--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio da Milena</title>
 </head>
@@ -77,6 +77,8 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
             </main>
 
             <footer class="container py-5">
